[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/game_objects/gameplay/Constructor/Area.gd" type="Script" id=1]
[ext_resource path="res://scenes/game_objects/gameplay/Constructor/area.material" type="Material" id=2]


[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.25, 0.25, 0.25 )

[sub_resource type="CubeMesh" id=2]

[node name="AreaBottom" type="Area"]
collision_layer = 0
collision_mask = 16
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0, 0 )
visible = false
mesh = SubResource( 2 )
material/0 = ExtResource( 2 )

[node name="ObjectContainer" type="Spatial" parent="."]
[connection signal="area_entered" from="." to="." method="_on_Area_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Area_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Area_body_exited"]
